# HEXplorer

./: .clangd  .gitignore  CMakeLists.txt  CMakeLists.txt.user.5d5db2a  README.md  push_nexus_repo.py
installer/: HEXplorer_installer.pro  README  qt.conf  toto.qrc
installer/com.liebherr.hexplorerGNU/meta/: package.xml
installer/config/: config.xml  style.qss
installer/repository/: Updates.xml
libs/QScintilla_src-2.14.0/doc/: qscintilla.dxy
libs/QScintilla_src-2.14.0/doc/html/: annotated.html  classQsciAPIs-members.html  classQsciAPIs.html  classQsciAbstractAPIs-members.html  classQsciAbstractAPIs.html  classQsciCommand-members.html  classQsciCommand.html  classQsciCommandSet-members.html  classQsciCommandSet.html  classQsciDocument-members.html  classQsciDocument.html  classQsciLexer-members.html  classQsciLexer.html  classQsciLexerAVS-members.html  classQsciLexerAVS.html  classQsciLexerAsm-members.html  classQsciLexerAsm.html  classQsciLexerBash-members.html  (+181 more)
libs/QScintilla_src-2.14.0/src/: Makefile  Makefile.Debug  Makefile.Release  qscintilla.pro  qscintilla.pro.user.5d5db2a
libs/qwt-6.2.0/: Makefile  qwtconfig.pri
libs/qwt-6.2.0/classincludes/: Makefile
libs/qwt-6.2.0/designer/: Makefile  object_script.qwt_designer_plugin
libs/qwt-6.2.0/doc/: Makefile
libs/qwt-6.2.0/examples/: Makefile
libs/qwt-6.2.0/playground/: Makefile
libs/qwt-6.2.0/src/: Makefile  Makefile.Debug  Makefile.Release
libs/qwt-6.2.0/tests/: Makefile
libs/xerces-c-3.2.5/: CMakeLists.txt  Makefile  config.h  config.status  xerces-c.pc
libs/xerces-c-3.2.5/doc/: Doxyfile  Makefile
libs/xerces-c-3.2.5/samples/: Makefile
libs/xerces-c-3.2.5/scripts/: run-test
libs/xerces-c-3.2.5/src/: Makefile
libs/xerces-c-3.2.5/tests/: Makefile
src/: CMakeLists.txt  FandRModel.h  HEXplorer.pro  a2ltreemodel.cpp  a2ltreemodel.h  canvaspicker.cpp  charmodel.cpp  chooselabel.cpp  chooselabel.h  choosesubset.h  chtextedit.cpp  chtextedit_old.h  comboboxdelegate.h  comparemodel.cpp  ctabwidget.h  dataprototype.cpp  dataprototype.h  deletefiledialog.cpp  deletefiledialog.h  dialog.cpp  dialog.h  dialog.ui  dialogbitdisplay.cpp  dialogbitdisplay.ui  dialogchooseexportformat.cpp  dialogchoosemodule.cpp  dialogcsv.cpp  dialogdatadimension.h  dialogeditastext.ui  dialogexceedwb.cpp  dialogexceedwb.h  dialoghttpupdate.cpp  dialoghttpupdate.h  dialogupdate.cpp  diffmodel.cpp  diffmodel.h  excel.cpp  excel.h  finddialog.cpp  foo.h  (+56 more)
src/ASAP2/: a2l.cpp  a2l.h  a2l_quex_lexer.cpp  a2lgrammar.cpp  a2lgrammar.h  basefactory.h  lexer.cpp  lexer.h  node.cpp  node.h  parserworker.h  worker.cpp  worker.h
src/ASAP2/Items/: addr_epk.cpp  addr_epk.h  alignment_byte.cpp  alignment_byte.h  alignment_float32_ieee.cpp  alignment_float32_ieee.h  alignment_float64_ieee.cpp  alignment_float64_ieee.h  alignment_long.cpp  alignment_long.h  alignment_word.cpp  alignment_word.h  annotation_label.cpp  annotation_label.h  annotation_origin.cpp  annotation_origin.h  array_size.cpp  array_size.h  axis_pts_ref.cpp  axis_pts_ref.h  axis_pts_x.cpp  axis_pts_x.h  axis_pts_y.cpp  axis_pts_y.h  bit_mask.cpp  bit_mask.h  byte_order.cpp  byte_order.h  calibration_handle_text.cpp  calibration_handle_text.h  coeffs.cpp  coeffs.h  coeffs_linear.cpp  coeffs_linear.h  compu_tab_ref.cpp  compu_tab_ref.h  cpu_type.cpp  cpu_type.h  customer.cpp  customer.h  (+78 more)
src/ASAP2/Nodes/: a2lfile.cpp  a2lfile.h  a2ml.cpp  a2ml.h  annotation.cpp  annotation.h  annotation_text.cpp  annotation_text.h  axis_descr.cpp  axis_descr.h  axis_pts.cpp  axis_pts.h  calibration_handle.cpp  calibration_handle.h  calibration_method.cpp  calibration_method.h  characteristic.cpp  characteristic.h  compu_method.cpp  compu_method.h  compu_tab.cpp  compu_tab.h  compu_vtab.cpp  compu_vtab.h  compu_vtab_range.cpp  compu_vtab_range.h  dbfile.cpp  dbfile.h  def_characteristic.cpp  def_characteristic.h  fix_axis_par_list.cpp  fix_axis_par_list.h  formula.cpp  formula.h  function.cpp  function.h  function_list.cpp  function_list.h  group.cpp  group.h  (+36 more)
src/DataContainers/: cdfxfile.cpp  cdfxfile.h  csv.cpp  csv.h  data.cpp  data.h  datacontainer.cpp  datacontainer.h  dcmfile.cpp  dcmfile.h  errorcode.h  hexfile.cpp  hexfile.h  lexerCsv.cpp  lexerCsv.h  lexerDcm.cpp  lexerDcm.h  srecfile.cpp  srecfile.h
src/DataModels/: FandRmodel.cpp  ObdMergeModel.cpp  ObdMergeModel.h  ObdMergeModelEcu4.h  a2ltreemodel.cpp  a2ltreemodel.h  charmodel.cpp  charmodel.h  comboboxdelegate.cpp  comparemodel.h  graphmodel.cpp  measmodel.cpp  obdMergeModel.cpp  obdMergeModelEcu4.cpp  obdsortfilterproxymodel.cpp  obdsortfilterproxymodel.h  sptablemodel.cpp  sptablemodelHex.cpp  sptablemodelHex.h  treemodelcompleter.h
src/PlotGraph/: canvaspicker.cpp  canvaspicker.h  plot.cpp  plot.h  scrollzoomer.cpp  scrollzoomer.h  surfacegraph.cpp  surfacegraph.h  zoomer.cpp  zoomer.h
src/WidgetsViews/: chooselabel_QListView.cpp  chooselabel_QListView.h  chtextedit.h  ctabwidget.cpp  dialoghttpupdate.cpp  dialoghttpupdate.h  dialogupdate.cpp  freezetablewidget.cpp  freezetablewidget.h  mainwindow.cpp  mainwindow.h  myqlineedit.cpp  mytreeview.cpp  onlineupdater.cpp  onlineupdater.h  projectlistwidget.cpp  settingstree.cpp  spreadsheetview.cpp  spreadsheetview.h  spreadsheetviewwithfrozencol.cpp  spreadsheetviewwithfrozencol.h  treedirectory.cpp  treedirectory.h  variantdelegate.cpp  workingdirectory.cpp  workingdirectory.h  workproject.cpp  workproject.h
src/files/: cdf_v2.0.0.cl.xsd
src/ui_forms/: chooselabel.cpp  chooselabel.h  chooselabel.ui  choosesubset.cpp  choosesubset.ui  deletefiledialog.ui  dialogbitdisplay.h  dialogchooseexportformat.ui  dialogchoosemodule.h  dialogchoosemodule.ui  dialogcsv.cpp  dialogcsv.h  dialogcsv.ui  dialogdatadimension.cpp  dialogdatadimension.ui  dialogeditastext.cpp  dialogeditastext.h  dialogexceedwb.ui  dialogprogressdownload.cpp  dialogprogressdownload.h  dialogprogressdownload.ui  formcompare.cpp  formcompare.h  formcompare.ui  formeditor.cpp  graph.cpp  graph.h  graph.ui  graphverify.cpp  graphverify.h  labelproperties.cpp  mdimain.cpp  mdimain.h  mdimain.ui
(+246 files in other folders)
